[project]
name = "galgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.1",
    "lightning>=2.6.1",
    "numpy>=2.4.3",
    "opencv-python>=4.11.0.86",
    "rich>=14.3.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "lmdb>=1.6.2",
    "tensorboard>=2.20.0",
]   

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galgenerator"]
